# espresso-sequencer

./: .env  .gitmodules  Cargo.toml  crates.js  docker-compose.yaml  help.html  justfile  process-compose.yaml  search-index.js  settings.html  src-files.js
.cargo/: audit.toml
audits/: README.md
builder/: Cargo.toml  all.html  fn.run_builder_api_service.html  index.html
cdn_broker/: all.html  fn.main.html  index.html  struct.Args.html
cdn_marshal/: all.html  fn.main.html  index.html  struct.Args.html
cdn_whitelist/: all.html  fn.main.html  index.html  struct.Args.html
client/: all.html  index.html  struct.SequencerClient.html  type.FeeMerkleProof.html  type.SequencerApiVersion.html
contract_bindings_alloy/: all.html  index.html  sidebar-items.js
contract_bindings_ethers/: all.html  index.html
deploy/: all.html  fn.main.html  index.html  struct.Options.html
dev_cdn/: all.html  fn.main.html  index.html  struct.Args.html
dev_rollup/: all.html  enum.Command.html  fn.main.html  fn.parse_update.html  fn.parse_update_option.html  fn.register.html  fn.update.html  index.html  struct.Options.html  struct.RegisterArgs.html  struct.UpdateArgs.html
diff_test/: all.html  enum.Action.html  fn.main.html  index.html  struct.Cli.html
doc/: ubuntu.md
docker/: staking-cli.Dockerfile  update-permissioned-stake-table.Dockerfile
staking-cli/: Cargo.toml  README.md  config.demo.toml  config.dev.toml  config.mainnet.toml
staking-cli/src/: claim.rs  delegation.rs  demo.rs  deploy.rs  l1.rs  lib.rs  parse.rs  registration.rs
staking-cli/tests/: cli.rs
(+4979 files in other folders)
