[package]
name = "staking-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }

anyhow = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
clap = { workspace = true }
clap-serde = "0.5.1"
clap-serde-derive = "0.2.1"
contract-bindings-alloy = { workspace = true }
derive_more = { workspace = true }
directories = "6.0.0"
dotenvy = { workspace = true }
escargot = "0.5.13"
espresso-types = { version = "0.1.0", path = "../types" }
ethers-conv = { workspace = true }
futures-util = "0.3.31"
git-version = "0.3.9"
hotshot-contract-adapter = { workspace = true }
hotshot-types = { workspace = true }
jf-signature = { workspace = true, features = ["bls", "schnorr"] }
portpicker = { workspace = true }
rand = { workspace = true }
rust_decimal = "1.36.0"
serde = { workspace = true }
sysinfo = "0.33.1"
tagged-base64 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
